deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
        tier: client
    spec:
      containers:
      - name: frontend
        image: airtickets/frontend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - "[ -f /run/nginx.pid ] && ps -A | grep nginx"
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 80
          initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    tier: client
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 9090
      targetPort: 80
  selector:
    app: frontend
    tier: client
