deployment/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    tier: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            path: "/users"
            backend:
              service:
                name: user-service
                port:
                  number: 4040
